--- a/basic/exercise 1/basic-02.html
+++ b/basic/exercise 1/basic-02.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic Exercise 2</title>
 </head>
-<body>
-    
-    <script>
-        var temperature = Math.random(-5, 25);;
 
-        console.log(temperature);
-        </script>
+<body>
+
+    <script>
+        console.log(Math.max(1, 7, -3, 9));
+    </script>
 
 </body>
+
 </html>
