--- a/basic/exercise 1/basic-03.html
+++ b/basic/exercise 1/basic-03.html
@@ -16,11 +16,11 @@
         tempertaure = (tempertaure * 40 - 5);
         document.write("The temperature is ", Math.round(tempertaure), "<br>");
         if (tempertaure >= -5 && tempertaure <= 10) {
-            document.write("The weather is cold");
+            document.write("The weather is cold <br> <img src='img/cold.jpg'>");
         } else if (tempertaure > 32) {
-            document.write("The weather is hot");
+            document.write("The weather is hot <br> <img src='img/hot.jpg'>");
         } else {
-            document.write("The weather is moderate");
+            document.write("The weather is moderate <br> <img src='img/moderate.jpg'>");
         }
     </script>
 
